--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Shaw Talebi
+title: Nikolay Gorinov
 logo: /assets/img/headshot_circle.png
 #description: text below image
 show_downloads: true
